--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 asgiref==3.8.1
+attrs==25.3.0
 Django==5.2
+frozenlist==1.6.0
+idna==3.10
+multidict==6.4.3
+propcache==0.3.1
+python-weather==2.0.7
 sqlparse==0.5.3
+yarl==1.20.0
